syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb";

message RenewTokenRequest {
  string refreshToken = 1;
}

message RenewTokenResponse {
  string accessToken = 1;
  google.protobuf.Timestamp accessTokenExpiresAt = 2;
}
